# adventofcode_2022

./: README.md  aoc2022.opam  aoc2022.opam.locked  dune-project
common/ocaml/: aoc2022.ml  dune
d01/ocaml/: .ocamlformat  dune-project
d01/ocaml/lib/: aoc.ml  aoc.mli  aoc2022d01.ml  dune
d01/ruby/: p1.rb  p2.rb
d02/ocaml/lib/: aoc2022d02.ml  dune
d02/ruby/: p01.rb  p02.rb  p2.rb
d03/ocaml/lib/: aoc2022d03.ml  dune
d03/ruby/: p1.rb  p2.rb
d04/ocaml/lib/: aoc2022d04.ml  dune
d04/ruby/: p1.rb  p2.rb
d05/ocaml/lib/: aoc2022d05.ml  dune
d05/ruby/: p1.rb  p2.rb
d06/ruby/: p1.rb  p2.rb
d07/ocaml/lib/: aoc2022d07.ml  dune
d08/ocaml/lib/: aoc2022d08.ml  dune
d09/ocaml/lib/: aoc2022d09.ml  dune
d10/ocaml/lib/: aoc2022d10.ml  dune
d11/ocaml/lib/: aoc2022d11.ml  dune
d12/ocaml/lib/: aoc2022d12.ml  dune
d13/ocaml/lib/: aoc2022d13.ml  dune  lex_and_parse.ml  lexer.mll  packet.ml  parser.mly
d14/lib/: aoc2022d14.ml  dune
d15/ocaml/lib/: aoc2022d15.ml  dune
d16/ocaml/lib/: aoc2022d16.ml  dune
